# zte_kernel_sources

kernel_platform/qcom/proprietary/devicetree/: BUILD.bazel
kernel_platform/qcom/proprietary/devicetree/qcom/: platform_map.bzl
