load("//build/kernel/kleaf:kernel.bzl", "kernel_dtstree")

kernel_dtstree(
	name = "msm_dt",
	srcs = glob(
		[
			"Makefile",
			"qcom/**/*.dtsi",
			"qcom/**/*.dts",
			"qcom/Makefile",
			"bindings/**/*",
		],
		exclude = [
			"**/.*",
			"**/.*/**",
			"**/*.bazel",
			"**/*.bzl",
        	],
	),
	visibility = ["//visibility:public"],
)
